fix home glyph to align bottom

--- a/src/main/resources/static/css/creative.css
+++ b/src/main/resources/static/css/creative.css
@@ -671,9 +671,7 @@ header .header-content .header-content-inner div{
     top:33%;
     font-size:2em;
 }
-.glyphicon {
-    top: 3px;
-}
+
 #menu-toggle{
     display:none;
 }
